fixed scrollbar

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -21,6 +21,8 @@ body {
   background-color: $color-background;
   font-family: 'Open Sans', sans-serif;
   margin: 0;
+  height: 100vh;
+  overflow: hidden;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
